--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: default
                   <div class="caption">
                     <h3>{{ post.title }}</h3>
                     <p>{{ post.small_desc }}</p>
-                    <p><a href="{{ post.url | prepend: site.baseurl }}" class="btn btn-default" role="button">Preview & Download</a></p>
+                    <p><a href="{{ post.url }}" class="btn btn-default" role="button">Preview & Download</a></p>
                   </div>
                 </div>
 
