--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@ layout: default
       <h1 class="jumbo-number">Scoop Themes</h1>
       <h3 class="jumbo-md">100% Free High Crafted Bootstrap HTML Templates & Themes</h3>
       <p>Gesture By <a href="http://www.mshaaban.com" target="_blank">Moe Shaaban</a></p>
-      <a href="all-templates.html" class="btn btn-lg btn-default-2"><span class="fa fa-list-alt"></span> Browse Themes & Templates</a>
+      <div class="home-ad">
+        <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=scoopthemes" id="_carbonads_js"></script>
+      </div>
     </div>
   </div>
 </div>
