--- a/index.html
+++ b/index.html
@@ -8,8 +8,22 @@ layout: default
       <h1 class="jumbo-number">Scoop Themes</h1>
       <h3 class="jumbo-md">100% Free High Crafted Bootstrap HTML Templates & Themes</h3>
       <p>Gesture By <a href="http://www.mshaaban.com" target="_blank">Moe Shaaban</a></p>
+      <div>
+            
+            
+
+            <a class="twitter-share-button"
+              href="{{ site.url }}"
+              data-count="true">
+            Tweet
+            </a>
+
+            <iframe src="http://ghbtns.com/github-btn.html?user={{ site.github_username }}&amp;repo=scoopthemes.github.io&amp;type=fork&amp;count=true" class="github-fork"></iframe>
+
+            <iframe src="http://ghbtns.com/github-btn.html?user={{ site.github_username }}&amp;repo=scoopthemes.github.io&amp;type=watch&amp;count=true"  class="github-follow" ></iframe>
+      </div>
       <div class="home-ad">
-        <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=scoopthemes" id="_carbonads_js"></script>
+        <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1673&amp;serve=C6AILKT&amp;placement=scoopthemes" id="_carbonads_js"></script>
       </div>
     </div>
   </div>
@@ -17,7 +31,7 @@ layout: default
 
 <div class="container">
       <section>
-        <h1 class="section-heading">Newest Templates <small>Latest Bootstrap Templates</small></h1>
+        <h2 class="h1 section-heading">Newest Templates <small>Latest Bootstrap Templates</small></h2>
         <div class="st-tem-list">
 
           <div class="row">
@@ -75,7 +89,7 @@ layout: default
               <div class="col-md-4 col-md-offset-4">
 
 
-              <form class="form-inline validate signup" action="http://scoopthemes.us8.list-manage.com/subscribe/post-json?u=c535e62cabdc2bfeb87bff6de&amp;id=d969b07f82&c=?" method="get" role="form">
+              <form class="form-inline validate signup" action="http://scoopthemes.us8.list-manage.com/subscribe/post-json?u=c535e62cabdc2bfeb87bff6de&amp;id=d969b07f82&amp;c=?" method="get" role="form">
                   <div class="form-group">
                       <div class="input-group">
                         <input type="email" class="form-control subscribe" name="EMAIL" id="exampleInputEmail1" placeholder="Enter your email...">
