--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <div class="st-jumbo-overlay">
     <div class="jumbo-details">
       <h1 class="jumbo-number">Scoop Themes</h1>
-      <h3 class="jumbo-md">100% Free High Crafted Bootstrap HTML Templates & Themes</h3>
+      <h3 class="jumbo-md">100% Free Premium Bootstrap HTML Templates & Themes</h3>
       <p>Gesture By <a href="http://www.mshaaban.com" target="_blank">Moe Shaaban</a></p>
       <div>
             
