--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@ layout: default
 <div class="st-jumbo">
   <div class="st-jumbo-overlay">
     <div class="jumbo-details">
-      <h1 class="jumbo-number">Scoop Themes</h1>
+      <h1 class="jumbo-number">Open Source</h1>
       <h3 class="jumbo-md">100% Free Premium Bootstrap HTML Templates & Themes</h3>
       <p>Gesture By <a href="http://www.mshaaban.com" target="_blank">Moe Shaaban</a></p>
       <div>
             
-            
-
             <a class="twitter-share-button"
               href="{{ site.url }}"
               data-count="true">
