--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ layout: default
             Tweet
             </a>
 
-            <iframe src="http://ghbtns.com/github-btn.html?user={{ site.github_username }}&amp;repo=scoopthemes.github.io&amp;type=fork&amp;count=true" class="github-fork"></iframe>
-
             <iframe src="http://ghbtns.com/github-btn.html?user={{ site.github_username }}&amp;repo=scoopthemes.github.io&amp;type=watch&amp;count=true"  class="github-follow" ></iframe>
+
+            <script id='fb4w2wu'>(function(i){var f,s=document.getElementById(i);f=document.createElement('iframe');f.src='//api.flattr.com/button/view/?uid=scoopthemes&button=compact&url=http%3A%2F%2Fscoopthemes.com';f.title='Flattr';f.height=20;f.width=110;f.style.borderWidth=0;s.parentNode.insertBefore(f,s);})('fb4w2wu');</script>
       </div>
       <div class="home-ad">
         <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1673&amp;serve=C6AILKT&amp;placement=scoopthemes" id="_carbonads_js"></script>
